Fix: Increase font size for user controls for better visibility.

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -283,7 +283,7 @@ html {
 
 .listViewUserDataButtons {
     flex-direction: column;
-    font-size: x-small;
+    font-size: larger;
 }
 
 .smallBackdropCard,
